fix: tags display on small width

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -70,7 +70,9 @@ p {
 @mixin tag {
     border-radius: 8px;
     color: white;
+    display: inline-block;
     font-weight: bold;
+    margin-bottom: 8px;
     margin-right: 8px;
     opacity: 60%;
     padding: 6px;
